--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <hr>-->
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <a class="btn btn-primary float-right" href="#">See Lab News &rarr;</a>
         </div>
       </div>
     </div>
