--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             on September 18, 2019</p>
         </div>
         <hr>
-        
-            <img class="img-computer" src="img/Artboard 4.png" alt="computer and smartphone icons" style="float: right;padding:20px;">
+       <!--  <img class="img-computer" src="img/Artboard 4.png" alt="computer and smartphone icons" style="float: right;padding:20px;">
+--> 
 
          
         </div>
