--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
   </div>
 
   <hr>
+  
+  <div class="col-lg-4 col-md-2 mx-auto">
+    <img class="img-computer" src="img/Artboard 4.png" alt="computer and smartphone icons" style="float: right;padding:10px;">
 
   <!-- Footer -->
   <footer>
