--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>Contact Me</h1>
-            <span class="subheading">Have questions? I have answers.</span>
+            <h1>Contact Us</h1>
+            
           </div>
         </div>
       </div>
@@ -69,6 +69,14 @@
 
   <!-- Main Content -->
   <div id="map"></div>
+  
+  <style>
+ #map {
+   width: 80%;
+   height: 400px;
+   background-color: grey;
+ }
+</style>
 
   <hr>
 
