--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">Lab News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="post.html">Publications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
