--- a/about.html
+++ b/about.html
@@ -53,13 +53,13 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/bkgrd test')">
+  <header class="masthead" style="background-image: url('img/bkgrd test.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Me</h1>
+            <h1>Lab News</h1>
             <span class="subheading">This is what I do.</span>
           </div>
         </div>
