--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <hr>-->
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">See Lab News &rarr;</a>
+          <a class="btn btn-primary float-right" href="about.html">See Lab News &rarr;</a>
         </div>
       </div>
     </div>
