--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </h3>  
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-2 pr-4">
+          <div class="col-lg-4 col-md-2">
            <img class="img-computer" src="img/Artboard 4.png" class="img-fluid" alt="computer and smartphone icons" style="float: right;padding:20px;">
           </div>
         </div>
