--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
              Under what conditions do communication technologies enhance or impair people’s ability to make sound political decisions?
           </h3>  
         </div>
-        <div class="row">
+        <div class="row justify-content-end">
           <div class="col-lg-4 col-md-2">
            <img class="img-computer" src="img/Artboard 4.png" class="img-fluid" alt="computer and smartphone icons" style="float: right;padding:20px;">
           </div>
