--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>Lab News</h1>
-            <span class="subheading">This is what I do.</span>
+            <span class="subheading"></span>
           </div>
         </div>
       </div>
