--- a/post.html
+++ b/post.html
@@ -77,17 +77,17 @@
           </h3>
           <p><b>Coronel, J.C.</b>, & Federmeier, K.D. (2016). The effects of gender cues and political sophistication on candidate evaluation: A comparison of self-report and eye movement measures of stereotyping. <i>Communication Research</i>, 43, 922-944.
             <br><br>
-            Coronel, J.C., & Federmeier, K.D. (2016). The N400 reveals how personal semantics is processed: Insights into the nature and organization of self-knowledge. Neuropsychologia, 84, 36-43
+            <b>Coronel, J.C.</b>, & Federmeier, K.D. (2016). The N400 reveals how personal semantics is processed: Insights into the nature and organization of self-knowledge. <i>Neuropsychologia</i>, 84, 36-43
             <br><br>
-            Falk, E.B., Cascio, C.N., & Coronel, J.C.. (2015). Neural prediction of communicationrelevant outcomes. Communication Methods and Measures, 9, 30-54.
+            Falk, E.B., Cascio, C.N., & <b>Coronel, J.C.</b>. (2015). Neural prediction of communicationrelevant outcomes. <i>Communication Methods and Measures</i>, 9, 30-54.
             <br><br>
-            Coronel, J.C., Federmeier, K.D., & Gonsalves, B.D. (2014). Event-related potential evidence suggesting voters remember political events that never happened. Social Cognitive and Affective Neuroscience, 9, 358-366
+            <b>Coronel, J.C.</b>, Federmeier, K.D., & Gonsalves, B.D. (2014). Event-related potential evidence suggesting voters remember political events that never happened. <i>Social Cognitive and Affective Neuroscience</i>, 9, 358-366
             <br><br>
-            Coronel, J.C., & Federmeier, K.D. (2014). Task demands modulate decision and eye movement responses in the chimeric face test: Examining the right hemisphere processing account. Frontiers in Psychology, 5, 229.
+            <b>Coronel, J.C.</b>, & Federmeier, K.D. (2014). Task demands modulate decision and eye movement responses in the chimeric face test: Examining the right hemisphere processing account. <i>Frontiers in Psychology</i>, 5, 229.
             <br><br>
-            Coronel, J.C., Duff, M.C., Warren, D.E., Gonsalves, B.D., Federmeier, K.D., Tranel, D.T., & Cohen, N.J. (2012). Remembering and voting: Theory and evidence from amnesic patients. American Journal of Political Science, 56, 837-848
+            <b>Coronel, J.C.</b>, Duff, M.C., Warren, D.E., Gonsalves, B.D., Federmeier, K.D., Tranel, D.T., & Cohen, N.J. (2012). Remembering and voting: Theory and evidence from amnesic patients. <i>American Journal of Political Science</i>, 56, 837-848
            <br><br>
-            Coronel, J.C., & Kuklinski, J.H. (2012). Political psychology at Stony Brook: A retrospective. Critical Review, 24, 185-198.
+            <b>Coronel, J.C.</b>, & Kuklinski, J.H. (2012). Political psychology at Stony Brook: A retrospective. <i>Critical Review</i>, 24, 185-198.
           </p>
           
           <br>
@@ -98,7 +98,7 @@
             </h3>
           
           <p>
-            Coronel, J.C., & Falk, E.B. fMRI and communication science. In International Encyclopedia of Communication Research Methods. (in press).
+            <b>Coronel, J.C.</b>, & Falk, E.B. fMRI and communication science. In <i>International Encyclopedia of Communication Research Methods</i>. (in press).
           </p>
           <a href="#">
             <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
