--- a/index.html
+++ b/index.html
@@ -152,7 +152,11 @@
     </div>
   </div>
   
-
+   <div class="row justify-content-end">
+          <div class="col-lg-4 col-md-2">
+           <img class="img-computer" src="img/Artboard 4.png" class="img-fluid" alt="computer and smartphone icons" style="float: right;padding:20px;">
+          </div>
+        </div>
 
   <hr>
   
